# dtu_mlops_giannis

./: LICENSE  Makefile  README.md  pyproject.toml  requirements.txt  tasks.py
.dvc/: config
dockerfiles/: predict_model.dockerfile  train_model.dockerfile
docs/: mkdocs.yaml
docs/source/: index.md
dtu_mlops_giannis/: __init__.py  train_model.py
dtu_mlops_giannis/data/: make_dataset.py
dtu_mlops_giannis/models/: predict_model.py  train_model.py
dtu_mlops_giannis/visualizations/: visualize.py
exercises/: typer_exercise.py  typing_exercise.py
